// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[React 17] EuiDroppable can be given ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id="0"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`[React 17] EuiDroppable can be given multiple ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id="0"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div />
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`[React 17] EuiDroppable is rendered 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id="0"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`[React 18] EuiDroppable can be given ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id=":r3:"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`[React 18] EuiDroppable can be given multiple ReactElement children 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id=":r6:"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div />
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;

exports[`[React 18] EuiDroppable is rendered 1`] = `
<div
  class="euiDroppable euiDroppable--noGrow"
  data-rfd-droppable-context-id=":r0:"
  data-rfd-droppable-id="testDroppable"
  data-test-subj="droppable"
>
  <div />
  <div
    class="euiDroppable__placeholder"
  />
</div>
`;
